--- a/crates/app/Cargo.toml
+++ b/crates/app/Cargo.toml
@@ -6,6 +6,7 @@ edition.workspace = true
 [dependencies]
 daw_decode = { path = "../decode" }
 daw_engine = { path = "../engine" }
+daw_project = { path = "../project" }
 daw_transport = { path = "../transport" }
 gpui = "*"
 anyhow = "1.0"
