--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -4,6 +4,7 @@ version.workspace = true
 edition.workspace = true
 
 [dependencies]
+daw_decode = { path = "../decode" }
 daw_engine = { path = "../engine" }
 daw_project = { path = "../project" }
 daw_render = { path = "../render" }
