--- a/crates/app/Cargo.toml
+++ b/crates/app/Cargo.toml
@@ -9,3 +9,6 @@ gpui = "*"
 anyhow = "1.0"
 rfd = "0.16"
 unicode-segmentation = "1.10"
+dirs = "6.0.0"
+toml = "0.9.8"
+serde = { version = "1.0.228", features = ["derive"] }
