--- a/crates/decode/Cargo.toml
+++ b/crates/decode/Cargo.toml
@@ -7,3 +7,7 @@ edition.workspace = true
 daw_transport = { path = "../transport" }
 symphonia = "0.5"
 anyhow = "1.0"
+
+[dev-dependencies]
+hound = "3.5"
+tempfile = "3.8"
