--- a/crates/tauri/src-tauri/Cargo.toml
+++ b/crates/tauri/src-tauri/Cargo.toml
@@ -22,4 +22,6 @@ tauri-plugin-opener = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 anyhow = "1.0"
+tokio = { version = "1", features = ["time"] }
+tauri-plugin-dialog = "2.4.2"
 
