--- a/crates/tauri/src-tauri/Cargo.toml
+++ b/crates/tauri/src-tauri/Cargo.toml
@@ -17,7 +17,7 @@ tauri-build = { version = "2", features = [] }
 
 [dependencies]
 daw_core = { path = "../../core" }
-tauri = { version = "2", features = [] }
+tauri = { version = "2", features = ["unstable"] }
 tauri-plugin-opener = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
